Make client more robust